# SortStrategyComparison

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: SortStrategy.hpp  SortingContext.hpp
include/Sort/: BubbleSort.hpp  QuickSort.hpp
include/Utilities/: utilities.hpp
src/: SortStrategy.cpp  SortingContext.cpp
src/Sort/: BubbleSort.cpp  QuickSort.cpp
tests/: CMakeLists.txt
tests/src/: BubbleSort_tests.cpp  Fun_tests.cpp  QuickSort_tests.cpp
